# OpenDirectoryScanner

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
resources/: config.toml
src/: main.rs  nsfwcheck.rs  report.rs  scanner.rs
